--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ button {
 
 header {
      height: 105px;
-     background: #8b1310;
+     background: #FFFFFF;
      width: 100%;
      padding: 33px 30px;
 }
@@ -261,7 +261,7 @@ ul.email {
 
 ul.email li {
      display: inline-block;
-     color: #fff;
+     color: #000;
      padding: 0 20px;
      font-size: 17px;
 }
@@ -275,11 +275,11 @@ ul.email li a {
 }
 
 ul.email li a {
-     color: #fff;
+     color: #000;
 }
 
 ul.email li i {
-     color: #fff;
+     color: #000;
      font-size: 20px;
      padding-right: 10px;
 }
